fix: public variables -> now private with getter and setter add: == operator IBan add: proveBalance and updateBalance as well as the balance variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_executable(FinanceManager main.cpp
         objects/IBan.h
         objects/IBan.h
         objects/IBan.cpp
+        objects/User.cpp
 )
